# openmonero

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FindMonero.cmake  ProjectMonero.cmake
src/: CurrentBlockchainStatus.cpp  CurrentBlockchainStatus.h  OutputInputIdentification.cpp  OutputInputIdentification.h  TxSearch.cpp  TxSearch.h  YourMoneroRequests.cpp  monero_headers.h
